Changes in 4.4.0

* Passwords are case-sensitive.
* Hotlink protection for files: Downloads from a web-accessible "/files" directory are inhibited. The "/file_download/$id/example.foo" route is the only valid way to access downloadable files. Requires an Apache webserver.
* Empty <txp:variable></txp:variable> container sets a variable's value to "".
* WordPress import tool fixed for WP 3.x.
* Developer: txp_validate() accepts a '$log' parameter to discern between "real user login" vs. "just validating credentials" usage.
* Developer: sendAsyncEvent() accepts parameter $format.
* Developer: Introducing escape_js() and send_script_response().
* Developer: phpass 0.3 / genuine for password portability, hashing, stretching, and salting. Old-style passwords will be migrated upon a user's first login. Persistent hash values in database are incompatible with previous versions.
* jQuery 1.5.1

Changes in 4.3.0

* Security: Fixed two XSS vulnerabilities (thanks Jorge Hoya and High-Tech Bridge). Updates are recommended.
* New Textpattern logo by courtesy of Philipp Schilling (belipe, http://www.psgd.de). Happy retirement to The Carver!
* Feature: Optional alternate URL for static image resources. Defined in constant "ihu".
* Feature: /category and /author lists for all content types, with conditionals and pagination
* Feature: Optional top-level 'Home' tab for dashboard plugins
* Feature: File titles
* Feature: Multiple categories/sections in feeds via http://example.com/rss/?category=foo,bar&section=baz,omg and http://example.com/atom/?category=foo,bar&section=baz,omg)
* New tags: <txp:images />, <txp:image_info />, <txp:image_url />, <txp:image_date />, <txp:if_thumbnail />.
* New tags: <txp:link_author />, <txp:image_author />, <txp:file_download_author />.
* Changed: Verbose semantic admin-side markup.
* Changed: Explicit "Create new $thing" button for pages and styles.
* Changed: <txp:image /> and  <txp:article_image /> accept "width" and/or "height" attribute.